--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,6 @@
     "import datetime, time\n",
     "import sys\n",
     "import cv2\n",
-    "\n",
-    "# Hint: print() to stderr (fh#2) as the actual video stream goes to stdout (fh#1)!\n",
-    "\n",
     "\n",
     "#source: https://www.videvo.net/video/woman-in-vr-headset-on-greenscreen/7816/\n",
     "cap = cv2.VideoCapture(\"171003B_005_2K.mp4\") # TODO: You have to verify, if /dev/video0 is your actual webcam! \n",
@@ -57,7 +54,16 @@
     "\n",
     "#KEYING METHODS-----------------------------------------------------------------------\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#Chroma Key Despill ------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
     "def ChromaKeyPlusDespill(frame4):\n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
@@ -73,22 +79,9 @@
     "    chroma_key=cv2.cvtColor( np.uint8([[colorbase]] ), cv2.COLOR_RGB2YUV)[0][0]\n",
     "    \n",
     "    \n",
-    "    #seperate color chanels\n",
-    "    frame_r=np.zeros((width,height,1))\n",
-    "    frame_r[:,:,0]=frame4[:,:,0]\n",
-    "    frame_g=np.zeros((width,height,1))\n",
-    "    frame_g[:,:,0]=frame4[:,:,1]\n",
-    "    frame_b=np.zeros((width,height,1))\n",
-    "    frame_b[:,:,0]=frame4[:,:,2]\n",
     "    \n",
-    "    #3. despill version 3: average\n",
-    "    despill3_g=np.zeros((width,height,1))\n",
-    "    despill3_g[(frame_g>((frame_r+frame_b)/2)).all(axis=2)]=1\n",
-    "    despill3=np.zeros((width,height,3))\n",
-    "    despill3[:,:,1]=despill3_g[:,:,0]\n",
     "    \n",
-    "    #apply despill on frame\n",
-    "    frame4=np.where(despill3==1,((frame_r+frame_b)/2),frame4)\n",
+    "    frame4=Despill1(frame4)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -129,7 +122,7 @@
     "    distances=cv2.filter2D(distances,-1, kernel)\n",
     "    \n",
     "    \n",
-    "     #and frame_g>230 and frame_b>230\n",
+    "    #and frame_g>230 and frame_b>230\n",
     "    \n",
     "    #assign pixels with distances<threshold to foreground and >=threshold to foreground and make all other pixels transparent\n",
     "    threshold1=95\n",
@@ -148,6 +141,90 @@
     "    resultimage[:,:,2]=((distances[:,:])*frame4[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
     "\n",
     "    return(resultimage)\n",
+    "\n",
+    "def Despill1(frame4):\n",
+    "    #seperate color chanels\n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    despill_g=np.zeros((width,height,1))\n",
+    "    despill_g[(frame_g>frame_r).all(axis=2)]=1\n",
+    "    despill=np.zeros((width,height,3))\n",
+    "    despill[:,:,1]=despill_g[:,:,0]\n",
+    "    frame4=np.where(despill==1,frame_r,frame4)\n",
+    "    return(frame4)\n",
+    "\n",
+    "def Despill2(frame4):\n",
+    "    #seperate color chanels\n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    despill_g=np.zeros((width,height,1))\n",
+    "    despill_g[(frame_g>frame_b).all(axis=2)]=1\n",
+    "    despill=np.zeros((width,height,3))\n",
+    "    despill[:,:,1]=despill_g[:,:,0]\n",
+    "    frame4=np.where(despill==1,frame_b,frame4)\n",
+    "    return(frame4)\n",
+    "    \n",
+    "    \n",
+    "def Despill3(frame4):\n",
+    "    #seperate color chanels\n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    #3. despill version 3: average\n",
+    "    despill=np.zeros((width,height,1))\n",
+    "    despill_g[(frame_g>((frame_r+frame_b)/2)).all(axis=2)]=1\n",
+    "    despill=np.zeros((width,height,3))\n",
+    "    despill[:,:,1]=despill_g[:,:,0]\n",
+    "    #apply despill on frame\n",
+    "    frame4=np.where(despill==1,((frame_r+frame_b)/2),frame4)\n",
+    "    return(frame4)\n",
+    "\n",
+    "\n",
+    "def Despill4(frame4):\n",
+    "    #seperate color chanels\n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    despill_g=np.zeros((width,height,1))\n",
+    "    despill_g[(frame_g>(((2*frame_r)+frame_b)/3)).all(axis=2)]=1\n",
+    "    despill=np.zeros((width,height,3))\n",
+    "    despill[:,:,1]=despill_g[:,:,0]\n",
+    "    frame4=np.where(despill==1,(((2*frame_r)+frame_b)/3),frame4)\n",
+    "    return(frame4)\n",
+    "\n",
+    "def Despill5(frame4):\n",
+    "    #seperate color chanels\n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    despill_g=np.zeros((width,height,1))\n",
+    "    despill_g[(frame_g>((frame_r+(2*frame_b))/3)).all(axis=2)]=1\n",
+    "    despill=np.zeros((width,height,3))\n",
+    "    despill[:,:,1]=despill_g[:,:,0]\n",
+    "    frame4=np.where(despill==1,((frame_r+(2*frame_b))/3),frame4)\n",
+    "    return(frame4)\n",
     "\n",
     "\n",
     "#Chroma Key 1a (yuv)----------------------------------------------------------------------------\n",
