--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,8 @@
     "import datetime, time\n",
     "import sys\n",
     "import cv2\n",
+    "\n",
+    "\n",
     "\n",
     "#source: https://www.videvo.net/video/woman-in-vr-headset-on-greenscreen/7816/\n",
     "cap = cv2.VideoCapture(\"171003B_005_2K.mp4\") # TODO: You have to verify, if /dev/video0 is your actual webcam! \n",
@@ -38,7 +40,10 @@
     "#resize background to frame\n",
     "alternate_background = cv2.resize(alternate_background, (width,height))\n",
     "\n",
-    "\n",
+    "saveframes=False\n",
+    "framecounter=0\n",
+    "distances2=np.zeros((height,width,3), np.uint8)\n",
+    "framenumber=2\n",
     "\n",
     "counter=2\n",
     "counterprev=1 \n",
@@ -65,6 +70,10 @@
     "\n",
     "\n",
     "def ChromaKeyPlusDespill(frame4):\n",
+    "    global framecounter\n",
+    "    global distances2\n",
+    "    framecounter+=1\n",
+    "    \n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "\n",
@@ -134,6 +143,14 @@
     "    #distances[(frame_g>150).all(axis=2)]=1\n",
     "    #distances[(frame_b>150).all(axis=2)]=1\n",
     "    \n",
+    "    \n",
+    "    distances2[:,:,0]=(distances[:,:])*255\n",
+    "    distances2[:,:,1]=(distances[:,:])*255\n",
+    "    distances2[:,:,2]=(distances[:,:])*255\n",
+    "    \n",
+    "    \n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"mask.jpg\", distances2)\n",
     "    \n",
     "    #apply mask on frame\n",
     "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
@@ -615,9 +632,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
     "while(1):\n",
-    "    \n",
     "    #read current frame\n",
     "    rval, frame4 = cap.read()\n",
     "    \n",
@@ -633,6 +648,11 @@
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
     "    \n",
+    "    \n",
+    "    #safe frame at position of counter\n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"originalframe.jpg\", frame4)\n",
+    "        \n",
     "    #apply filter\n",
     "    #ChromaKeyVersion1a()\n",
     "    #ChromaKeyVersion2()\n",
@@ -642,6 +662,10 @@
     "    #LumaKeyv3()\n",
     "    frame4=ChromaKeyPlusDespill(frame4)\n",
     "    \n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"resultframe.jpg\", frame4)\n",
+    "        \n",
+    "        \n",
     "    #return result of current frame\n",
     "    cv2.imshow('resultimage',frame4)\n",
     "    \n",
