--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     "    frame_b[:,:,0]=frame4[:,:,2]\n",
     "    \n",
     "    #3. despill version 3: average\n",
-    "    despill=np.zeros((width,height,1))\n",
+    "    despill_g=np.zeros((width,height,1))\n",
     "    despill_g[(frame_g>((frame_r+frame_b)/2)).all(axis=2)]=1\n",
     "    despill=np.zeros((width,height,3))\n",
     "    despill[:,:,1]=despill_g[:,:,0]\n",
@@ -241,6 +241,29 @@
     "    despill=np.zeros((width,height,3))\n",
     "    despill[:,:,1]=despill_g[:,:,0]\n",
     "    frame4=np.where(despill==1,((frame_r+(2*frame_b))/3),frame4)\n",
+    "    return(frame4)\n",
+    "\n",
+    "\n",
+    "def DespillA(frame4):#todo\n",
+    "    key=np.array([0,255,0])\n",
+    "    \n",
+    "    #seperate color chanels\n",
+    "    frame_r=np.zeros((width,height,1))\n",
+    "    frame_r[:,:,0]=frame4[:,:,0]\n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    despill_g=np.zeros((width,height,1))\n",
+    "    despill_g[(180>frame_g>((frame_r+frame_b)/2)).all(axis=2)]=1\n",
+    "    despill=np.zeros((width,height,3))\n",
+    "    despill[:,:,0]=despill_g[:,:,0]\n",
+    "    despill[:,:,1]=despill_g[:,:,0]\n",
+    "    despill[:,:,2]=despill_g[:,:,0]\n",
+    "    frame4=np.where(despill==1,np.minimum(np.maximum((frame_g-(key/2)),0)*(2/1),255),frame4)\n",
+    "    \n",
+    "    \n",
     "    return(frame4)\n",
     "\n",
     "\n",
@@ -654,20 +677,30 @@
     "        cv2.imwrite(\"originalframe.jpg\", frame4)\n",
     "        \n",
     "    #apply filter\n",
-    "    #ChromaKeyVersion1a()\n",
-    "    #ChromaKeyVersion2()\n",
-    "    #ChromaKeyVersion3()\n",
-    "    #ColorKeyVersion1()\n",
-    "    #ColorKeyVersion2()\n",
-    "    #LumaKeyv3()\n",
     "    frame4=ChromaKeyPlusDespill(frame4)\n",
+    "    #frame4=ChromaKeyVersion1a(frame4)\n",
+    "    #frame4=ChromaKeyVersion1b(frame4)\n",
+    "    #frame4=ChromaKeyVersion2(frame4)\n",
+    "    #frame4=ChromaKeyVersion3(frame4)\n",
+    "    #frame4=ColorKey(frame4)\n",
+    "    #frame4=LumaKey(frame4)\n",
+    "    #frame4=LumaKeyv2(frame4)\n",
+    "    \n",
+    "    #only for tests\n",
+    "    #frame4=Despill1(frame4)\n",
+    "    #frame4=Despill2(frame4)\n",
+    "    #frame4=Despill3(frame4)\n",
+    "    #frame4=Despill4(frame4)\n",
+    "    #frame4=Despill5(frame4)\n",
     "    \n",
     "    if (framecounter==framenumber and saveframes):\n",
     "        cv2.imwrite(\"resultframe.jpg\", frame4)\n",
     "        \n",
-    "        \n",
+    "    #apply mask on frame\n",
+    "    resultimage[:,:,:]=(frame4[:,:,:])\n",
+    "    \n",
     "    #return result of current frame\n",
-    "    cv2.imshow('resultimage',frame4)\n",
+    "    cv2.imshow('resultimage',resultimage)\n",
     "    \n",
     "    #close window if esc is pressed\n",
     "    key = cv2.waitKey(1)\n",
