--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,23 +16,14 @@
     "import cv2\n",
     "\n",
     "\n",
-    "\n",
-    "#source: https://www.videvo.net/video/woman-in-vr-headset-on-greenscreen/7816/\n",
-    "cap = cv2.VideoCapture(\"171003B_005_2K.mp4\") # TODO: You have to verify, if /dev/video0 is your actual webcam! \n",
-    "\n",
-    "# Adjust channel resolution & use actual\n",
-    "cap.set(3, 640)\n",
-    "cap.set(4, 480)\n",
+    "cap = cv2.VideoCapture(\"AMSBigExplosion.mov\") \n",
+    "#cap = cv2.VideoCapture(\"testvideo.mp4\")\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "alternate_background= cv2.imread(\"pink.png\")#todo \n",
-    "#alternate_background=cv2.cvtColor(alternate_background, cv2.COLOR_BGRA2RGB)\n",
+    "#source:https://unsplash.com/photos/fJQSCxB18wE\n",
+    "alternate_background= cv2.imread(\"vitaliy-gavrushchenko-fJQSCxB18wE-unsplash.jpg\")#todo \n",
     "\n",
     "\n",
     "rval, frame = cap.read()\n",
@@ -43,7 +34,7 @@
     "saveframes=False\n",
     "framecounter=0\n",
     "distances2=np.zeros((height,width,3), np.uint8)\n",
-    "framenumber=2\n",
+    "framenumber=0\n",
     "\n",
     "counter=2\n",
     "counterprev=1 \n",
@@ -66,7 +57,9 @@
     "\n",
     "\n",
     "#Chroma Key Despill ------------------------------------------------------------------\n",
-    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "def ChromaKeyPlusDespill(frame4):\n",
@@ -87,13 +80,7 @@
     "    #convert base color to yuv\n",
     "    chroma_key=cv2.cvtColor( np.uint8([[colorbase]] ), cv2.COLOR_RGB2YUV)[0][0]\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    frame4=Despill1(frame4)\n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    \n",
     "    \n",
     "    #make copy of chroma_key for calculations outside of uint8\n",
@@ -137,18 +124,21 @@
     "    threshold1=95\n",
     "    threshold2=350\n",
     "    \n",
-    "    distances= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0))\n",
-    "    #distances= np.where(distances<=threshold1,0, np.where(distances>=threshold2,1, 0.5))\n",
+    "    trimap= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0.5))\n",
     "    \n",
-    "    #distances[(frame_g>150).all(axis=2)]=1\n",
-    "    #distances[(frame_b>150).all(axis=2)]=1\n",
+    "    distances= np.where(((distances-threshold1)/(threshold2/threshold1))<=0,0, np.where(((distances-threshold1)/(threshold2/threshold1))>=1,1, 0.5))\n",
     "    \n",
+    "    distances2[:,:,0]=(trimap[:,:])*255\n",
+    "    distances2[:,:,1]=(trimap[:,:])*255\n",
+    "    distances2[:,:,2]=(trimap[:,:])*255\n",
     "    \n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"trimap.jpg\", distances2)\n",
+    "        \n",
     "    distances2[:,:,0]=(distances[:,:])*255\n",
     "    distances2[:,:,1]=(distances[:,:])*255\n",
     "    distances2[:,:,2]=(distances[:,:])*255\n",
-    "    \n",
-    "    \n",
+    "        \n",
     "    if (framecounter==framenumber and saveframes):\n",
     "        cv2.imwrite(\"mask.jpg\", distances2)\n",
     "    \n",
@@ -265,6 +255,10 @@
     "    \n",
     "    \n",
     "    return(frame4)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "#Chroma Key 1a (yuv)----------------------------------------------------------------------------\n",
@@ -490,8 +484,6 @@
     "\n",
     "\n",
     "#Chroma Key 3\n",
-    "#todo desc\n",
-    "#todo fix\n",
     "def ChromaKeyVersion3(frame4):\n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
@@ -541,7 +533,13 @@
     "    resultimage[:,:,2]=((distances[:,:])*frame4[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
     "    return(resultimage)\n",
     "\n",
-    "#Color Key\n",
+    "#Chroma Key 4 ---------------------------------------------------------------------------------------\n",
+    "\n",
+    "#def ChromaKeyv4(frame4):\n",
+    "    \n",
+    "\n",
+    "\n",
+    "#Color Key----------------------------------------------------------------------------------------------------\n",
     "\n",
     "def ColorKey(frame4):\n",
     "    #array that returns the result\n",
@@ -569,8 +567,17 @@
     "    distances=((color_key2[0]-rgb_r)**2+(color_key2[1]-rgb_g)**2+(color_key2[2]-rgb_b)**2)**(0.5)\n",
     "        \n",
     "    #    \n",
-    "    threshold1=180\n",
-    "    distances= np.where(distances<threshold1,0,1)\n",
+    "    threshold1=189\n",
+    "    threshold2=200\n",
+    "    distances= np.where(distances<=threshold1,0, np.where(distances>=threshold2,1, 0.5))\n",
+    "    \n",
+    "    distances2[:,:,0]=(distances[:,:])*255\n",
+    "    distances2[:,:,1]=(distances[:,:])*255\n",
+    "    distances2[:,:,2]=(distances[:,:])*255\n",
+    "    \n",
+    "    \n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"trimap.jpg\", distances2)\n",
     "    \n",
     "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
     "    resultimage[:,:,1]=((distances[:,:])*frame4[:,:,1])+((1-distances[:,:])*alternate_background[:,:,1])\n",
@@ -578,11 +585,19 @@
     "    return(resultimage)\n",
     "\n",
     "#Luma Key 1------------------------------------------------------------------------------------\n",
+    "#source:  https://en.wikipedia.org/wiki/Smoothstep\n",
+    "def smoothstepv1(luminance):\n",
+    "    threshold1=100\n",
+    "    threshold2=180\n",
+    "    tolerance1=10\n",
+    "    tolerance2=10\n",
+    "    return (smoothstep(luminance[0],threshold1,threshold1+tolerance1)*(1- smoothstep(luminance[0],threshold2-tolerance2,threshold2)))\n",
     "\n",
-    "#todo add source\n",
-    "def smoothstep0(luminance):\n",
-    "    threshold1=220\n",
-    "    threshold2=250\n",
+    "    \n",
+    "#source:  https://en.wikipedia.org/wiki/Smoothstep\n",
+    "def smoothstepv2(luminance):\n",
+    "    threshold1=100\n",
+    "    threshold2=180\n",
     "    return smoothstep(luminance[0],threshold1,threshold2)\n",
     "\n",
     "def smoothstep(x, xmin, xmax):\n",
@@ -595,14 +610,8 @@
     "        return 3*smoothstep1**2- 2*smoothstep1**3\n",
     "\n",
     "\n",
-    "\n",
     "    \n",
     "def LumaKey(frame4):\n",
-    "    lumaMin=220\n",
-    "    lumaMax=250\n",
-    "    lumaMinSmooth=0\n",
-    "    lumaMaxSmooth=0\n",
-    "\n",
     "\n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
@@ -613,8 +622,10 @@
     "    luminance[:,:,0]=frame4[:,:,0]*luma_converter[0]+frame4[:,:,1]*luma_converter[1]+frame4[:,:,2]*luma_converter[2]\n",
     "    \n",
     "    #mask\n",
-    "    mask=np.apply_along_axis(smoothstep0,2,luminance)\n",
-    "  \n",
+    "    mask=np.apply_along_axis(smoothstepv1,2,luminance)\n",
+    "    mask=abs(mask-1)\n",
+    "    #OR\n",
+    "    #mask=np.apply_along_axis(smoothstepv2,2,luminance)\n",
     "    \n",
     "    #assign resulting image to foreground or background\n",
     "    resultimage[:,:,0]=(1-mask[:,:])*frame4[:,:,0]+(mask[:,:])*alternate_background[:,:,0]\n",
@@ -627,8 +638,7 @@
     "\n",
     "\n",
     "def LumaKeyv2(frame4):\n",
-    "    threshold=130\n",
-    "    tolerance=10\n",
+    "\n",
     "\n",
     "    #array that returns the result\n",
     "    resultimage= np.zeros((width,height,3), np.uint8)\n",
@@ -650,7 +660,7 @@
     "    return(resultimage)\n",
     "\n",
     "#--------------------------------------------------------------------------------------------------------------\n",
-    "\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -659,11 +669,15 @@
     "    #read current frame\n",
     "    rval, frame4 = cap.read()\n",
     "    \n",
-    "    #replace frame with picture for testing\n",
-    "    ###frame= cv2.imread(\"test2.jpg\")\n",
+    "    \n",
+    "    #frame4=cv2.imread(\"photo-1506220926022-cc5c12acdb35.jpeg\")\n",
+    "    \n",
     "    \n",
     "    #shape of frame\n",
     "    width, height, channels = frame4.shape\n",
+    "    \n",
+    "    #alternate_background = cv2.resize(alternate_background, (height,width))\n",
+    "    \n",
     "    \n",
     "    #make empty mask with same size as frame\n",
     "    mask= np.zeros((width,height), np.uint8)\n",
@@ -675,7 +689,8 @@
     "    #safe frame at position of counter\n",
     "    if (framecounter==framenumber and saveframes):\n",
     "        cv2.imwrite(\"originalframe.jpg\", frame4)\n",
-    "        \n",
+    "    \n",
+    "    cv2.imshow('original',frame4)\n",
     "    #apply filter\n",
     "    frame4=ChromaKeyPlusDespill(frame4)\n",
     "    #frame4=ChromaKeyVersion1a(frame4)\n",
@@ -685,6 +700,7 @@
     "    #frame4=ColorKey(frame4)\n",
     "    #frame4=LumaKey(frame4)\n",
     "    #frame4=LumaKeyv2(frame4)\n",
+    "    #frame4=LumaKeyv3(frame4)\n",
     "    \n",
     "    #only for tests\n",
     "    #frame4=Despill1(frame4)\n",
