--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,17 @@
     "import cv2\n",
     "\n",
     "\n",
-    "cap = cv2.VideoCapture(\"AMSBigExplosion.mov\") \n",
-    "#cap = cv2.VideoCapture(\"testvideo.mp4\")\n",
+    "cap = cv2.VideoCapture(\"171003D_017_2K.mp4\") \n",
+    "#cap = cv2.VideoCapture(0)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#source:https://unsplash.com/photos/fJQSCxB18wE\n",
-    "alternate_background= cv2.imread(\"vitaliy-gavrushchenko-fJQSCxB18wE-unsplash.jpg\")#todo \n",
+    "alternate_background= cv2.imread(\"vitaliy-gavrushchenko-fJQSCxB18wE-unsplash.jpg\")\n",
+    "#alternate_background= cv2.imread(\"white.png\")\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "rval, frame = cap.read()\n",
@@ -58,10 +61,6 @@
     "\n",
     "#Chroma Key Despill ------------------------------------------------------------------\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n",
     "def ChromaKeyPlusDespill(frame4):\n",
     "    global framecounter\n",
     "    global distances2\n",
@@ -79,8 +78,6 @@
     "    \n",
     "    #convert base color to yuv\n",
     "    chroma_key=cv2.cvtColor( np.uint8([[colorbase]] ), cv2.COLOR_RGB2YUV)[0][0]\n",
-    "    \n",
-    "    frame4=Despill1(frame4)\n",
     "    \n",
     "    \n",
     "    #make copy of chroma_key for calculations outside of uint8\n",
@@ -117,9 +114,6 @@
     "    #apply kernel on distances\n",
     "    distances=cv2.filter2D(distances,-1, kernel)\n",
     "    \n",
-    "    \n",
-    "    #and frame_g>230 and frame_b>230\n",
-    "    \n",
     "    #assign pixels with distances<threshold to foreground and >=threshold to foreground and make all other pixels transparent\n",
     "    threshold1=95\n",
     "    threshold2=350\n",
@@ -141,6 +135,84 @@
     "        \n",
     "    if (framecounter==framenumber and saveframes):\n",
     "        cv2.imwrite(\"mask.jpg\", distances2)\n",
+    "    \n",
+    "    #apply mask on frame\n",
+    "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
+    "    resultimage[:,:,1]=((distances[:,:])*frame4[:,:,1])+((1-distances[:,:])*alternate_background[:,:,1])\n",
+    "    resultimage[:,:,2]=((distances[:,:])*frame4[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
+    "\n",
+    "    return(resultimage)   \n",
+    "    \n",
+    "\n",
+    "\n",
+    "def ChromaKeyPlusDespillv2(frame4):\n",
+    "    global framecounter\n",
+    "    global distances2\n",
+    "    framecounter+=1\n",
+    "    \n",
+    "    #array that returns the result\n",
+    "    resultimage= np.zeros((width,height,3), np.uint8)\n",
+    "\n",
+    "    \n",
+    "    #convert every pixel in frame from rgb to yuv\n",
+    "    yuv = cv2.cvtColor(frame4, cv2.COLOR_RGB2YUV)\n",
+    "    \n",
+    "    #green RGB(0,255,0)\n",
+    "    colorbase=np.array([0,200,0])\n",
+    "    \n",
+    "    #convert base color to yuv\n",
+    "    chroma_key=cv2.cvtColor( np.uint8([[colorbase]] ), cv2.COLOR_RGB2YUV)[0][0]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #make copy of chroma_key for calculations outside of uint8\n",
+    "    chroma_key2=np.array([float(chroma_key[0]),float(chroma_key[1]),float(chroma_key[2])])\n",
+    "\n",
+    "    \n",
+    "    #array that saves the euclidean distance between all pixels in current frame and chroma key\n",
+    "    distances=np.zeros((width,height))\n",
+    "    \n",
+    "    #copy u and v chanel for calculating distance outside of uint8\n",
+    "    yuv_u=np.zeros((width,height))\n",
+    "    yuv_u[:,:]=yuv[:,:,1]\n",
+    "    yuv_v=np.zeros((width,height))\n",
+    "    yuv_v[:,:]=yuv[:,:,2]\n",
+    "    \n",
+    "    #calculate distances\n",
+    "    distances=((chroma_key2[1]-yuv_u)**2+(chroma_key2[2]-yuv_v)**2)**(0.5)\n",
+    "       \n",
+    "    #kernel size\n",
+    "    pixel=5\n",
+    "    pixel_h=3\n",
+    "    \n",
+    "    #fill kernel     (kernel=np.array([[2,0,0,0,2],[0,0,1,0,0],[2,0,0,0,2]])/9)\n",
+    "    kernel=np.zeros((pixel,pixel_h))     \n",
+    "    kernel[0,0],kernel[pixel-1,0],kernel[pixel-1,pixel_h-1],kernel[0,pixel_h-1]=2/9,2/9,2/9,2/9\n",
+    "    kernel[int((pixel-1)/2),int((pixel_h-1)/2)]=1/9\n",
+    "    \n",
+    "    frame_g=np.zeros((width,height,1))\n",
+    "    frame_g[:,:,0]=frame4[:,:,1]\n",
+    "    frame_b=np.zeros((width,height,1))\n",
+    "    frame_b[:,:,0]=frame4[:,:,2]\n",
+    "    \n",
+    "    \n",
+    "    #apply kernel on distances\n",
+    "    distances=cv2.filter2D(distances,-1, kernel)\n",
+    "    \n",
+    "    #assign pixels under threshold1 to background, over threshold 2 to foreground and make pixels between threshold1 and threshold2 transparent\n",
+    "    threshold1=95\n",
+    "    threshold2=105\n",
+    "\n",
+    "    distances= np.where(distances<threshold1,0, np.where(distances<=threshold2,0.5, 1))\n",
+    "        \n",
+    "    distances2[:,:,0]=(distances[:,:])#*255\n",
+    "    distances2[:,:,1]=(distances[:,:])#*255\n",
+    "    distances2[:,:,2]=(distances[:,:])#*255\n",
+    "        \n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"mask.jpg\", distances2)\n",
+    "        \n",
+    "    frame4=DespillA(frame4,distances)\n",
     "    \n",
     "    #apply mask on frame\n",
     "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
@@ -234,8 +306,8 @@
     "    return(frame4)\n",
     "\n",
     "\n",
-    "def DespillA(frame4):#todo\n",
-    "    key=np.array([0,255,0])\n",
+    "def DespillA(frame4,distances):\n",
+    "    key=255\n",
     "    \n",
     "    #seperate color chanels\n",
     "    frame_r=np.zeros((width,height,1))\n",
@@ -245,16 +317,38 @@
     "    frame_b=np.zeros((width,height,1))\n",
     "    frame_b[:,:,0]=frame4[:,:,2]\n",
     "    \n",
-    "    despill_g=np.zeros((width,height,1))\n",
-    "    despill_g[(180>frame_g>((frame_r+frame_b)/2)).all(axis=2)]=1\n",
+    "    #copy frame, so that calculations outside of uint8 can happen\n",
+    "    frame_copy=np.zeros((width,height,3))\n",
+    "    frame_copy[:,:,:]=frame4[:,:,:]\n",
+    "    \n",
+    "    #condition 1: green-tolerance<(red+blue)/2\n",
+    "    tolerance=60\n",
+    "    despill_c1=np.zeros((width,height,1))\n",
+    "    despill_c1[(frame_g-tolerance<((frame_r+frame_b)/2)).all(axis=2)]=1\n",
+    "    \n",
+    "    \n",
+    "    #condition 2: pixel has to be tranparent\n",
+    "    despill_c2=np.zeros((width,height,1))\n",
+    "    c2=np.where(distances==0.5,1,0)\n",
+    "    despill_c2[:,:,0]=c2[:,:]\n",
+    "    \n",
+    "    #apply filter on all pixels, that fulfill condition1 and 2\n",
     "    despill=np.zeros((width,height,3))\n",
-    "    despill[:,:,0]=despill_g[:,:,0]\n",
-    "    despill[:,:,1]=despill_g[:,:,0]\n",
-    "    despill[:,:,2]=despill_g[:,:,0]\n",
-    "    frame4=np.where(despill==1,np.minimum(np.maximum((frame_g-(key/2)),0)*(2/1),255),frame4)\n",
+    "    despill[:,:,0]=despill_c1[:,:,0]*despill_c2[:,:,0]\n",
+    "    despill[:,:,1]=despill_c1[:,:,0]*despill_c2[:,:,0]\n",
+    "    despill[:,:,2]=despill_c1[:,:,0]*despill_c2[:,:,0]\n",
     "    \n",
+    "    #pixel_new= (1-despill)*frame_old + despill*(frame_old-key/2)*2\n",
+    "    frame_copy[:,:,1]=(1-despill[:,:,1])*frame_copy[:,:,1] + (despill[:,:,1])*(np.minimum(np.maximum((frame_copy[:,:,1]-(key/2)),0)*2,255))\n",
+    "\n",
+    "    #adjust transparency (todo: make transition smoother)\n",
+    "    frame_copy=(1-despill)*frame_copy + despill*((frame_copy*0.5)+(alternate_background*0.5))\n",
     "    \n",
+    "    #copy result back into frame4\n",
+    "    frame4=frame_copy\n",
     "    return(frame4)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -648,7 +742,7 @@
     "    \n",
     "    luminance=np.zeros((width,height,1))\n",
     "    luminance[:,:,0]=yuv[:,:,0]\n",
-    "\n",
+    "    \n",
     "    mask=np.where((0<luminance),np.where((220>luminance),1,0),1)\n",
     "    \n",
     "    #assign resulting image to foreground or background\n",
@@ -660,8 +754,37 @@
     "    return(resultimage)\n",
     "\n",
     "#--------------------------------------------------------------------------------------------------------------\n",
-    "    \n",
     "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "def LumaKeyv3(frame4):#Schultz Version\n",
+    "\n",
+    "    luma_key=0.5*255\n",
+    "    tolerance=0.2*255\n",
+    "    smoothness=0.1*255\n",
+    "    #array that returns the result\n",
+    "    resultimage= np.zeros((width,height,3), np.uint8)\n",
+    "\n",
+    "    #convert every pixel in frame from rgb to hls\n",
+    "    hls = cv2.cvtColor(frame4, cv2.COLOR_RGB2HLS)\n",
+    "    \n",
+    "    #luminance=np.zeros((width,height,1))\n",
+    "    luminance=hls[:,:,1]\n",
+    "    print(hls)\n",
+    "    print(luminance)\n",
+    "    #luminance=luminance/255\n",
+    "    mask=np.apply_along_axis(step,2,luminance)\n",
+    "    mask=np.where((10<luminance),np.where((245>luminance),1,0),0)\n",
+    "    \n",
+    "    \n",
+    "    #assign resulting image to foreground or background\n",
+    "    resultimage[:,:,0]=(mask[:,:])*frame4[:,:,0]+(1-mask[:,:])*alternate_background[:,:,0]\n",
+    "    resultimage[:,:,1]=(mask[:,:])*frame4[:,:,1]+(1-mask[:,:])*alternate_background[:,:,1]\n",
+    "    resultimage[:,:,2]=(mask[:,:])*frame4[:,:,2]+(1-mask[:,:])*alternate_background[:,:,2]\n",
+    "\n",
+    "\n",
+    "    return(resultimage)\n",
     "\n",
     "\n",
     "\n",
@@ -670,7 +793,7 @@
     "    rval, frame4 = cap.read()\n",
     "    \n",
     "    \n",
-    "    #frame4=cv2.imread(\"photo-1506220926022-cc5c12acdb35.jpeg\")\n",
+    "    #frame4=cv2.imread(\"engin-akyurt-d9Rit-GWBoI-unsplash-2.jpg\")\n",
     "    \n",
     "    \n",
     "    #shape of frame\n",
@@ -692,7 +815,8 @@
     "    \n",
     "    cv2.imshow('original',frame4)\n",
     "    #apply filter\n",
-    "    frame4=ChromaKeyPlusDespill(frame4)\n",
+    "    #frame4=ChromaKeyPlusDespill(frame4)\n",
+    "    frame4=ChromaKeyPlusDespillv2(frame4)\n",
     "    #frame4=ChromaKeyVersion1a(frame4)\n",
     "    #frame4=ChromaKeyVersion1b(frame4)\n",
     "    #frame4=ChromaKeyVersion2(frame4)\n",
@@ -708,6 +832,7 @@
     "    #frame4=Despill3(frame4)\n",
     "    #frame4=Despill4(frame4)\n",
     "    #frame4=Despill5(frame4)\n",
+    "    #frame4=DespillA(frame4)\n",
     "    \n",
     "    if (framecounter==framenumber and saveframes):\n",
     "        cv2.imwrite(\"resultframe.jpg\", frame4)\n",
@@ -725,6 +850,13 @@
     "\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
