--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,9 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n",
+      "(480, 640)\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -17,7 +105,7 @@
     "\n",
     "\n",
     "cap = cv2.VideoCapture(\"171003D_017_2K.mp4\") \n",
-    "#cap = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(0)\n",
     "\n",
     "\n",
     "\n",
@@ -646,9 +734,9 @@
     "    color_key2=np.array([float(color_key[0]),float(color_key[1]),float(color_key[2])])\n",
     "        \n",
     "    #array that saves the euclidean distance between all pixels in current frame and chroma key\n",
-    "    distances=np.zeros((width,height))    \n",
+    "    distances=np.zeros((width,height)) \n",
     "    \n",
-    "    #\n",
+    "    \n",
     "    rgb_r=np.zeros((width,height))\n",
     "    rgb_r[:,:]=frame4[:,:,0]\n",
     "    rgb_g=np.zeros((width,height))\n",
@@ -665,6 +753,52 @@
     "    threshold2=200\n",
     "    distances= np.where(distances<=threshold1,0, np.where(distances>=threshold2,1, 0.5))\n",
     "    \n",
+    "    distances2[:,:,0]=(distances[:,:])*255\n",
+    "    distances2[:,:,1]=(distances[:,:])*255\n",
+    "    distances2[:,:,2]=(distances[:,:])*255\n",
+    "    \n",
+    "    \n",
+    "    if (framecounter==framenumber and saveframes):\n",
+    "        cv2.imwrite(\"trimap.jpg\", distances2)\n",
+    "    \n",
+    "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
+    "    resultimage[:,:,1]=((distances[:,:])*frame4[:,:,1])+((1-distances[:,:])*alternate_background[:,:,1])\n",
+    "    resultimage[:,:,2]=((distances[:,:])*frame4[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
+    "    return(resultimage)\n",
+    "\n",
+    "\n",
+    "#Color Key v2\n",
+    "def ColorKeyv2(frame4):\n",
+    "    #array that returns the result\n",
+    "    resultimage= np.zeros((width,height,3), np.uint8)\n",
+    "\n",
+    "    #green RGB(0,255,0)\n",
+    "    color_key=np.array([0,255,0])\n",
+    "    \n",
+    "    #make copy of chroma_key for calculations outside of uint8\n",
+    "    color_key2=np.array([float(color_key[0]),float(color_key[1]),float(color_key[2])])\n",
+    "            \n",
+    "    frame4=Despill2(frame4)\n",
+    "    \n",
+    "    rgb_r=np.zeros((width,height))\n",
+    "    rgb_r[:,:]=frame4[:,:,0]\n",
+    "    rgb_g=np.zeros((width,height))\n",
+    "    rgb_g[:,:]=frame4[:,:,1]\n",
+    "    rgb_b=np.zeros((width,height))\n",
+    "    rgb_b[:,:]=frame4[:,:,2]\n",
+    "    \n",
+    "    \n",
+    "    #calculate distances\n",
+    "    distances0=((color_key2[0]-rgb_r)**2+(color_key2[1]-rgb_g)**2+(color_key2[2]-rgb_b)**2)**(0.5)\n",
+    "    \n",
+    "    #array that saves the euclidean distance between all pixels in current frame and chroma key\n",
+    "    distances=np.zeros((width,height,1))\n",
+    "    distances[:,:,0]=distances0[:,:]\n",
+    "    \n",
+    "    \n",
+    "    #print(distances.shape)    \n",
+    "    distances=np.apply_along_axis(smoothstepv3,2,distances)\n",
+    "    print(distances.shape)\n",
     "    distances2[:,:,0]=(distances[:,:])*255\n",
     "    distances2[:,:,1]=(distances[:,:])*255\n",
     "    distances2[:,:,2]=(distances[:,:])*255\n",
@@ -703,7 +837,16 @@
     "    else:\n",
     "        return 3*smoothstep1**2- 2*smoothstep1**3\n",
     "\n",
-    "\n",
+    "def smoothstepv3(distance):\n",
+    "    threshold1=195#bee\n",
+    "    threshold2=200\n",
+    "    #print(distance[0])\n",
+    "    if distance[0]<= threshold1:\n",
+    "        return 0\n",
+    "    elif distance[0]>=threshold2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return ((distance[0]-threshold1)/(threshold2-threshold1))\n",
     "    \n",
     "def LumaKey(frame4):\n",
     "\n",
@@ -816,12 +959,13 @@
     "    cv2.imshow('original',frame4)\n",
     "    #apply filter\n",
     "    #frame4=ChromaKeyPlusDespill(frame4)\n",
-    "    frame4=ChromaKeyPlusDespillv2(frame4)\n",
+    "    #frame4=ChromaKeyPlusDespillv2(frame4)\n",
     "    #frame4=ChromaKeyVersion1a(frame4)\n",
     "    #frame4=ChromaKeyVersion1b(frame4)\n",
     "    #frame4=ChromaKeyVersion2(frame4)\n",
     "    #frame4=ChromaKeyVersion3(frame4)\n",
     "    #frame4=ColorKey(frame4)\n",
+    "    frame4=ColorKeyv2(frame4)\n",
     "    #frame4=LumaKey(frame4)\n",
     "    #frame4=LumaKeyv2(frame4)\n",
     "    #frame4=LumaKeyv3(frame4)\n",
