--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,97 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n",
-      "(480, 640)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -105,7 +17,7 @@
     "\n",
     "\n",
     "cap = cv2.VideoCapture(\"171003D_017_2K.mp4\") \n",
-    "cap = cv2.VideoCapture(0)\n",
+    "#cap = cv2.VideoCapture(0)\n",
     "\n",
     "\n",
     "\n",
@@ -778,7 +690,7 @@
     "    #make copy of chroma_key for calculations outside of uint8\n",
     "    color_key2=np.array([float(color_key[0]),float(color_key[1]),float(color_key[2])])\n",
     "            \n",
-    "    frame4=Despill2(frame4)\n",
+    "    frame5=Despill3(frame4)\n",
     "    \n",
     "    rgb_r=np.zeros((width,height))\n",
     "    rgb_r[:,:]=frame4[:,:,0]\n",
@@ -794,11 +706,10 @@
     "    #array that saves the euclidean distance between all pixels in current frame and chroma key\n",
     "    distances=np.zeros((width,height,1))\n",
     "    distances[:,:,0]=distances0[:,:]\n",
-    "    \n",
-    "    \n",
-    "    #print(distances.shape)    \n",
+    "    #print(np.mean(distances0))\n",
+    "     \n",
     "    distances=np.apply_along_axis(smoothstepv3,2,distances)\n",
-    "    print(distances.shape)\n",
+    "    \n",
     "    distances2[:,:,0]=(distances[:,:])*255\n",
     "    distances2[:,:,1]=(distances[:,:])*255\n",
     "    distances2[:,:,2]=(distances[:,:])*255\n",
@@ -807,9 +718,9 @@
     "    if (framecounter==framenumber and saveframes):\n",
     "        cv2.imwrite(\"trimap.jpg\", distances2)\n",
     "    \n",
-    "    resultimage[:,:,0]=((distances[:,:])*frame4[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
-    "    resultimage[:,:,1]=((distances[:,:])*frame4[:,:,1])+((1-distances[:,:])*alternate_background[:,:,1])\n",
-    "    resultimage[:,:,2]=((distances[:,:])*frame4[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
+    "    resultimage[:,:,0]=((distances[:,:])*frame5[:,:,0])+((1-distances[:,:])*alternate_background[:,:,0])\n",
+    "    resultimage[:,:,1]=((distances[:,:])*frame5[:,:,1])+((1-distances[:,:])*alternate_background[:,:,1])\n",
+    "    resultimage[:,:,2]=((distances[:,:])*frame5[:,:,2])+((1-distances[:,:])*alternate_background[:,:,2])\n",
     "    return(resultimage)\n",
     "\n",
     "#Luma Key 1------------------------------------------------------------------------------------\n",
@@ -838,15 +749,15 @@
     "        return 3*smoothstep1**2- 2*smoothstep1**3\n",
     "\n",
     "def smoothstepv3(distance):\n",
-    "    threshold1=195#bee\n",
-    "    threshold2=200\n",
-    "    #print(distance[0])\n",
+    "    threshold1=160\n",
+    "    threshold2=180\n",
+    "    \n",
     "    if distance[0]<= threshold1:\n",
-    "        return 0\n",
+    "        return 0.1\n",
     "    elif distance[0]>=threshold2:\n",
     "        return 1\n",
     "    else:\n",
-    "        return ((distance[0]-threshold1)/(threshold2-threshold1))\n",
+    "        return (0.8*((distance[0]-threshold1)/(threshold2-threshold1)))\n",
     "    \n",
     "def LumaKey(frame4):\n",
     "\n",
@@ -914,8 +825,8 @@
     "    \n",
     "    #luminance=np.zeros((width,height,1))\n",
     "    luminance=hls[:,:,1]\n",
-    "    print(hls)\n",
-    "    print(luminance)\n",
+    "    #print(hls)\n",
+    "    #print(luminance)\n",
     "    #luminance=luminance/255\n",
     "    mask=np.apply_along_axis(step,2,luminance)\n",
     "    mask=np.where((10<luminance),np.where((245>luminance),1,0),0)\n",
