--- a/funcam_tester.ipynb
+++ b/funcam_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,9 @@
     "framecounter=0\n",
     "distances2=np.zeros((height,width,3), np.uint8)\n",
     "framenumber=0\n",
+    "\n",
+    "#todo\n",
+    "mean=0\n",
     "\n",
     "counter=2\n",
     "counterprev=1 \n",
@@ -771,7 +774,7 @@
     "    \n",
     "    #mask\n",
     "    mask=np.apply_along_axis(smoothstepv1,2,luminance)\n",
-    "    mask=abs(mask-1)\n",
+    "    #mask=abs(mask-1)\n",
     "    #OR\n",
     "    #mask=np.apply_along_axis(smoothstepv2,2,luminance)\n",
     "    \n",
@@ -823,19 +826,19 @@
     "    #convert every pixel in frame from rgb to hls\n",
     "    hls = cv2.cvtColor(frame4, cv2.COLOR_RGB2HLS)\n",
     "    \n",
-    "    #luminance=np.zeros((width,height,1))\n",
-    "    luminance=hls[:,:,1]\n",
+    "    luminance=np.zeros((width,height,1))\n",
+    "    luminance[:,:,0]=hls[:,:,1]\n",
     "    #print(hls)\n",
     "    #print(luminance)\n",
     "    #luminance=luminance/255\n",
-    "    mask=np.apply_along_axis(step,2,luminance)\n",
+    "    mask=np.apply_along_axis(smoothstepv2,2,luminance)\n",
     "    mask=np.where((10<luminance),np.where((245>luminance),1,0),0)\n",
     "    \n",
     "    \n",
     "    #assign resulting image to foreground or background\n",
-    "    resultimage[:,:,0]=(mask[:,:])*frame4[:,:,0]+(1-mask[:,:])*alternate_background[:,:,0]\n",
-    "    resultimage[:,:,1]=(mask[:,:])*frame4[:,:,1]+(1-mask[:,:])*alternate_background[:,:,1]\n",
-    "    resultimage[:,:,2]=(mask[:,:])*frame4[:,:,2]+(1-mask[:,:])*alternate_background[:,:,2]\n",
+    "    resultimage[:,:,0]=(mask[:,:,0])*frame4[:,:,0]+(1-mask[:,:,0])*alternate_background[:,:,0]\n",
+    "    resultimage[:,:,1]=(mask[:,:,0])*frame4[:,:,1]+(1-mask[:,:,0])*alternate_background[:,:,1]\n",
+    "    resultimage[:,:,2]=(mask[:,:,0])*frame4[:,:,2]+(1-mask[:,:,0])*alternate_background[:,:,2]\n",
     "\n",
     "\n",
     "    return(resultimage)\n",
@@ -870,13 +873,13 @@
     "    cv2.imshow('original',frame4)\n",
     "    #apply filter\n",
     "    #frame4=ChromaKeyPlusDespill(frame4)\n",
-    "    #frame4=ChromaKeyPlusDespillv2(frame4)\n",
+    "    frame4=ChromaKeyPlusDespillv2(frame4)\n",
     "    #frame4=ChromaKeyVersion1a(frame4)\n",
     "    #frame4=ChromaKeyVersion1b(frame4)\n",
     "    #frame4=ChromaKeyVersion2(frame4)\n",
     "    #frame4=ChromaKeyVersion3(frame4)\n",
     "    #frame4=ColorKey(frame4)\n",
-    "    frame4=ColorKeyv2(frame4)\n",
+    "    #frame4=ColorKeyv2(frame4)\n",
     "    #frame4=LumaKey(frame4)\n",
     "    #frame4=LumaKeyv2(frame4)\n",
     "    #frame4=LumaKeyv3(frame4)\n",
